--- a/com.carlos.usuarios/.project
+++ b/com.carlos.usuarios/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.carlos.usuarios</name>
+	<name>com.Hibernate</name>
 	<comment></comment>
 	<projects>
 	</projects>
